@@ -540,9 +540,9 @@ namespace VDS.RDF.Storage
                     request = this.CreateRequest(this._repositoriesPrefix + this._store + "/statements", "*/*", "POST", serviceParams);
                 }
 
-                request.ContentType = MimeTypesHelper.NTriples[0];
-                NTriplesWriter ntwriter = new NTriplesWriter();
-                ntwriter.Save(g, new StreamWriter(request.GetRequestStream()));
+                request.ContentType = GetSaveContentType();
+                IRdfWriter rdfWriter = CreateRdfWriter();
+                rdfWriter.Save(g, new StreamWriter(request.GetRequestStream()));
 
                 Tools.HttpDebugRequest(request);
                 using (HttpWebResponse response = (HttpWebResponse)request.GetResponse())
@@ -556,6 +556,24 @@ namespace VDS.RDF.Storage
             {
                 throw StorageHelper.HandleHttpError(webEx, "save a Graph to");
             }
+        }
+
+        /// <summary>
+        /// Gets the Content Type used to save data to the store i.e. the MIME type to use for the <strong>Content-Type</strong> header
+        /// </summary>
+        /// <returns></returns>
+        protected virtual string GetSaveContentType()
+        {
+            return MimeTypesHelper.NTriples[0];
+        }
+
+        /// <summary>
+        /// Creates an RDF Writer to use for saving data to the store
+        /// </summary>
+        /// <returns></returns>
+        protected virtual IRdfWriter CreateRdfWriter()
+        {
+            return new NTriplesWriter();
         }
 
         /// <summary>
@@ -582,8 +600,7 @@ namespace VDS.RDF.Storage
                 HttpWebRequest request;
                 HttpWebResponse response;
                 Dictionary<String, String> serviceParams = new Dictionary<string, string>();
-                NTriplesWriter ntwriter = new NTriplesWriter();
-                //RdfXmlWriter writer = new RdfXmlWriter();
+                IRdfWriter rdfWriter = CreateRdfWriter();
 
                 if (!graphUri.Equals(String.Empty))
                 {
@@ -633,10 +650,8 @@ namespace VDS.RDF.Storage
                         request = this.CreateRequest(this._repositoriesPrefix + this._store + "/statements", "*/*", "POST", serviceParams);
                         Graph h = new Graph();
                         h.Assert(additions);
-                        request.ContentType = MimeTypesHelper.NTriples[0];
-                        ntwriter.Save(h, new StreamWriter(request.GetRequestStream()));
-                        //request.ContentType = MimeTypesHelper.RdfXml[0];
-                        //writer.Save(h, new StreamWriter(request.GetRequestStream()));
+                        request.ContentType = GetSaveContentType();
+                        rdfWriter.Save(h, new StreamWriter(request.GetRequestStream()));
 
                         Tools.HttpDebugRequest(request);
 
@@ -674,7 +689,6 @@ namespace VDS.RDF.Storage
             {
                 HttpWebResponse response;
                 Dictionary<String, String> serviceParams = new Dictionary<string, string>();
-                NTriplesWriter ntwriter = new NTriplesWriter();
 
                 if (!graphUri.Equals(String.Empty))
                 {
@@ -777,8 +791,8 @@ namespace VDS.RDF.Storage
                 request = this.CreateRequest(this._repositoriesPrefix + this._store + "/statements", "*/*", "POST", serviceParams);
             }
 
-            request.ContentType = MimeTypesHelper.NTriples[0];
-            NTriplesWriter ntwriter = new NTriplesWriter();
+            request.ContentType = GetSaveContentType();
+            IRdfWriter ntwriter = CreateRdfWriter();
 
             this.SaveGraphAsync(request, ntwriter, g, callback, state);
         }
@@ -818,7 +832,7 @@ namespace VDS.RDF.Storage
         {
             HttpWebRequest request;
             Dictionary<String, String> serviceParams;
-            NTriplesWriter ntwriter = new NTriplesWriter();
+            IRdfWriter rdfWriter = CreateRdfWriter();
 
             if (removals != null)
             {
@@ -880,10 +894,10 @@ namespace VDS.RDF.Storage
                                         request = this.CreateRequest(this._repositoriesPrefix + this._store + "/statements", "*/*", "POST", serviceParams);
                                         Graph h = new Graph();
                                         h.Assert(additions);
-                                        request.ContentType = MimeTypesHelper.NTriples[0];
+                                        request.ContentType = GetSaveContentType();
 
                                         //Thankfully Sesame lets us do additions in one request so we don't end up with horrible code like for the removals above
-                                        this.UpdateGraphAsync(request, ntwriter, graphUri.ToSafeUri(), additions, callback, state);
+                                        this.UpdateGraphAsync(request, rdfWriter, graphUri.ToSafeUri(), additions, callback, state);
 
                                         //Don't want to make the callback until the adds have finished
                                         //So we must return here as otherwise we will make the callback prematurely
@@ -920,10 +934,10 @@ namespace VDS.RDF.Storage
                     request = this.CreateRequest(this._repositoriesPrefix + this._store + "/statements", "*/*", "POST", serviceParams);
                     Graph h = new Graph();
                     h.Assert(additions);
-                    request.ContentType = MimeTypesHelper.NTriples[0];
+                    request.ContentType = GetSaveContentType();
 
                     //Thankfully Sesame lets us do additions in one request so we don't end up with horrible code like for the removals above
-                    this.UpdateGraphAsync(request, ntwriter, graphUri.ToSafeUri(), additions, callback, state);
+                    this.UpdateGraphAsync(request, rdfWriter, graphUri.ToSafeUri(), additions, callback, state);
 
                     //Don't want to make the callback until the adds have finished
                     //So we must return here as otherwise we will make the callback prematurely
