@@ -2552,4 +2552,9 @@
   <PropertyGroup>
     <PreBuildEvent>"$(SolutionDir)Build\SyncProjects\SyncProjects.exe" sync "$(SolutionDir)\Libraries\core\net40\dotNetRDF.csproj" "$(ProjectPath)"</PreBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Include="..\net40\Storage\Virtualisation\StoreVirtualGraphPersistenceWrapper.cs">
+      <Link>Storage\Virtualisation\StoreVirtualGraphPersistenceWrapper.cs</Link>
+    </Compile>
+  </ItemGroup>
 </Project>
